--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cross-env": "~3.1.4",
     "del-cli": "~0.2.1",
     "express": "~4.14.0",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "~2.26.0",
     "morgan": "~1.7.0",
     "ngc-webpack": "~1.1.0",
