--- a/package.json
+++ b/package.json
@@ -17,32 +17,32 @@
     "node": ">=6.4"
   },
   "scripts": {
+    "start": "cross-env NODE_ENV=development webpack-dev-server",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cross-env NODE_ENV=production webpack --display-chunks",
     "clean": "del-cli build dist",
-    "prebuild": "npm run clean",
     "server": "cross-env NODE_ENV=development nodemon -w 'server/**/*.*' server/main.js",
-    "server:webpack": "cross-env NODE_ENV=development webpack-dev-server",
-    "start": "npm run server:webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean:build": "npm-run-all --serial clean build",
+    "cbs": "npm-run-all --serial clean build server"
   },
   "dependencies": {
-    "@angular/common": "~2.4.2",
-    "@angular/compiler": "~2.4.2",
-    "@angular/core": "~2.4.2",
-    "@angular/forms": "~2.4.2",
-    "@angular/http": "~2.4.2",
-    "@angular/platform-browser": "~2.4.2",
-    "@angular/platform-browser-dynamic": "~2.4.2",
-    "@angular/platform-server": "~2.4.2",
-    "@angular/router": "~3.4.2",
-    "core-js": "~2.4.1",
-    "rxjs": "~5.0.3",
-    "zone.js": "~0.7.4"
+    "@angular/common": "^2.4.2",
+    "@angular/compiler": "^2.4.2",
+    "@angular/core": "^2.4.2",
+    "@angular/forms": "^2.4.2",
+    "@angular/http": "^2.4.2",
+    "@angular/platform-browser": "^2.4.2",
+    "@angular/platform-browser-dynamic": "^2.4.2",
+    "@angular/platform-server": "^2.4.2",
+    "@angular/router": "^3.4.2",
+    "core-js": "^2.4.1",
+    "rxjs": "^5.0.3",
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "~2.4.2",
-    "@types/node": "~6.0.58",
-    "angular2-template-loader": "~0.6.0",
+    "@angular/compiler-cli": "^2.4.2",
+    "@types/node": "^6.0.58",
+    "angular2-template-loader": "^0.6.0",
     "autoprefixer": "~6.6.1",
     "awesome-typescript-loader": "3.0.0-beta.17",
     "compression": "~1.6.2",
@@ -59,8 +59,8 @@
     "postcss-loader": "~1.2.1",
     "raw-loader": "~0.5.1",
     "sass-loader": "~4.1.1",
-    "ts-helpers": "~1.1.2",
-    "typescript": "~2.0.10",
+    "ts-helpers": "^1.1.2",
+    "typescript": "^2.0.10",
     "webpack": "2.2.0-rc.3",
     "webpack-dev-server": "2.2.0-rc.0",
     "webpack-md5-hash": "~0.0.5",
